src/styles/FileTree.scss
$hover-color:white;
$tree-color: white;
$plus-sign: white;
$minus-sign: black;
$box-color: white;

.FileTree {
  // Default
  font-family: 'Roboto Slab', serif;
  position: absolute;
  left: 7px;
  top: 4px;
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
  // Tree
  .tree {
    list-style: none;
    font-family: 'Hack';
    font-weight: lighter;
    margin: 0;
    padding: 0;
    margin-top: 7px;
    // unordered lists
    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      margin-left: 1.0em;
    }
    // links/folders
    .view-link, .external-link, .folder {
      cursor: pointer;
      text-decoration: none;
      color: $tree-color;
      -webkit-transition: color .3s ease-out;
      -moz-transition: color .3s ease-out;
      -o-transition: color .3s ease-out;
      transition: color .3s ease-out;
      // on hover
      &:hover {
        color: $hover-color;// #690101;
      }
      // link to currently selected view
      &.current {
        font-style: italic;
      }
    }
    // adds question mark after not-currently-selected links on hover
    .view-link, .external-link {
      &::before {
        content: '∙';
        margin-right: 8px;
        font-weight: bold;
        font-style: normal;
      }
      &:hover:not(.current) {
        &::after {
          content: '?'
        }
      }
    }
    // root folder
    .folder.root {
      display: inline-block;
      overflow: hidden;
      padding-top: 11px;
      font-size: 19px;
      position: absolute;
      top: -7px;
      transition: color .3s ease-out, width .5s ease-in-out;
      & + .toggle-container {
        top: -17px;
      }
    }
    // all sub-root folders
    .folder {
      margin-left: 2px;
    }
    // lists and their branches
    li {
      margin-left: 0.35em;
      padding-top: 20px;
      border-left: thin solid $tree-color;
      &:not(.first-gen) {
        animation-name: fade-in;
        animation-duration: 1.2s;
        animation-timing-function: cubic-bezier(0.33, 0.56, 0.59, 1.01);
      }
      &.first-gen {
        animation-name: fade-in-delayed;
        animation-duration: 1.2s;
        animation-timing-function: cubic-bezier(0.49, 0.04, 0.58, 1);
      }
      &:last-child {
        border-left: none;
      }
      &::before {
        width: 0.9em;
        height: 0.6em;
        margin-right: 0.1em;
        vertical-align: top;
        border-bottom: thin solid $tree-color;
        content: "";
        display: inline-block;
      }
      &:last-child:before {
        border-left: thin solid $tree-color;
        height: 29px;
        margin-top: -20px;
      }
    }
    // Children toggle button
    // Box that holds plus/minus sign
    .toggle-container {
      display: inline-block;
      width: 15px;
      height: 15px;
      position: relative;
      border-radius: 2px;
      left: -3px;
      top: 2px;
      // box on hover
      &.hover {
        background: rgba(189, 189, 189, 0.2);
      }
      // box while being clicked
      &.active {
        box-shadow: inset 0px 0px 2px 1px rgba(116, 116, 116, 0.365);
      }
      // open box 
      &.open {
        background: $box-color;
        // colors minus sign
        .toggle {
          &::before, &::after {
            background-color: $minus-sign;
          }
        }
      }
      // Plus sign
      .toggle {
        position: relative;
        &::before, &::after {
          content: '';
          display: block;
          position: absolute;
          top: 8px;
          right: -12px;
          width: 8px;
          height: 2px;
          margin-top: -1px;
          background-color: $plus-sign;
          -webkit-transform-origin: 50% 50%;
          -ms-transform-origin: 50% 50%;
          transform-origin: 50% 50%;
          -webkit-transition: all 0.25s;
          transition: all 0.25s;
        }
        &::before {
          -webkit-transform: rotate(-270deg);
          -ms-transform: rotate(-270deg);
          transform: rotate(-270deg);
          opacity: 0;
        }
        &.collapsed::before {
          -webkit-transform: rotate(0deg);
          -ms-transform: rotate(0deg);
          transform: rotate(0deg);
          opacity: 1;
        }
        &.collapsed::after {
          -webkit-transform: rotate(-90deg);
          -ms-transform: rotate(-90deg);
          transform: rotate(-90deg);
        }
      }
    }
  }
}

@keyframes fade-in { from { opacity: 0; } to { opacity: 1; } }
@keyframes fade-in-delayed {
  0% {
    opacity: 0;
  } 11% {
    opacity: 0;
  } 100% {
    opacity: 1;
  }
}

